--- a/cover.css
+++ b/cover.css
@@ -21,6 +21,10 @@ body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
+.section {
+  display: none;
+}
+
 h2 {
   margin-top: 30px;
   margin-bottom: 10px;
