--- a/cover.css
+++ b/cover.css
@@ -257,3 +257,11 @@ div#vcard {
   margin-right: auto;
   text-align: center;
 }
+
+.social-logos {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
