--- a/cover.css
+++ b/cover.css
@@ -56,6 +56,8 @@ hr {
   font-size: large;
   display: block;
   line-height: 1.6; 
+  padding-top: 1.2em;
+  padding-bottom: 1.5em;
   margin-block-start: 0em;
   margin-block-end: 0em;
   margin-inline-start: 0%;
