--- a/cover.css
+++ b/cover.css
@@ -251,17 +251,18 @@ div#vcard {
 
 .logos-flex-item {
   margin-top: 10px;
-  flex: 1 1 100px; /* Permet aux éléments de s'ajuster dans la ligne */
+  flex: 1 1 100px;
 }
 
 .flex-item-img-small {
-  height: 2em; /* Augmente la taille des logos */
+  height: 2em;
   margin: 0.5em;
   filter: grayscale(100%);
 }
 
 .flex-item-img-big {
-  width: 250px;
+  width: min(250px, 30vw);
+  max-width: 250px;
   height: auto;
   display: block;
   margin-left: auto;
